--- a/TestGit/index.html
+++ b/TestGit/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Ma page de test Git</title>
+    <title>Titre depuis la branche DEV</title>
 </head>
 <body>
     <h1 class="Titre">Ma page de test gitHub</h1>
