Commit avant merge branche dev

--- a/TestGit/index.html
+++ b/TestGit/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Titre depuis la branche DEV</title>
 </head>
+
 <body>
     <h1 class="Titre">Ma page de test gitHub</h1>
+    <h2>Mon sous titre</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa natus laboriosam, sit praesentium sapiente eum
+        quae ducimus qui ipsum reprehenderit soluta pariatur perspiciatis hic laudantium exercitationem eaque.
+        Distinctio, ipsum, cupiditate incidunt commodi rem atque laboriosam quis repellat cumque libero saepe excepturi
+        quidem. Neque fugit voluptas eligendi nemo possimus nesciunt ullam!
+        quidem. Neque fugit voluptas eligendi nemo possimus nesciunt ullam!
+    </p>
 </body>
+
 </html>
