--- a/TestGit/index.html
+++ b/TestGit/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="Titre">Ma page de test gitHub</h1>
+    <h1 class="Titre">Ma page de test DEV</h1>
     <h2>Mon sous titre</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa natus laboriosam, sit praesentium sapiente eum
