--- a/DotNET/Code/Html-CSS/Cours/4-Transform/Seance1.html
+++ b/DotNET/Code/Html-CSS/Cours/4-Transform/Seance1.html
@@ -56,24 +56,7 @@
         </nav>
     </header>
     <main>
-        <div class="conteneur">
-            <a href="#">
-                <div class="vignette">
-                    <img class="img" src="./img/LogoWord.png" alt="Logo Word">
-                    <div class="texte">
-                        Word
-                    </div>
-                </div>
-            </a>
-            <a href="#">
-                <div class="vignette">
-                    <img class="img" src="./img/LogoExcel.png" alt="Logo Excel">
-                    <div class="texte">
-                        Excel
-                    </div>
-                </div>
-            </a>
-        </div>
+        <h2>Séance 1</h2>
     </main>
     <footer class="footer">
         <div>
